# SimpleBarGraph

./: pyproject.toml
simple_bar_chart/: simple_bar.py
tests/: test_simple_bar_chart.py
