[tool.poetry]
name = "simple-bar-chart"
version = "0.1.0"
description = ""
authors = ["stuart <stuart@email>"]

[tool.poetry.dependencies]
python = "^3.8"
pylint = "^2.7.2"

[tool.poetry.dev-dependencies]
pytest = "*"
coverage = "*"
mock = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
